// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(v) => v ArrayBuffer 1`] = `
[
  ArrayBuffer [],
  ArrayBuffer [],
]
`;

exports[`(v) => v ArrayBuffer 2`] = `
[
  ArrayBuffer [],
  ArrayBuffer [],
  ArrayBuffer [],
]
`;

exports[`(v) => v Buffer & ArrayBuffer 1`] = `
[
  {
    "data": [
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  [
    0,
    0,
    0,
    0,
    0,
  ],
  {},
  ArrayBuffer [],
]
`;

exports[`(v) => v Buffer & ArrayBuffer 2`] = `
[
  {
    "data": [
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  [
    0,
    0,
    0,
    0,
    0,
  ],
  {},
  {
    "data": [
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  ArrayBuffer [],
  ArrayBuffer [],
  {
    "data": [
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  [
    0,
    0,
    0,
    0,
    0,
  ],
]
`;

exports[`(v) => v Buffer 1`] = `
[
  {
    "data": [
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  [
    0,
    0,
    0,
    0,
    0,
  ],
  {},
]
`;

exports[`(v) => v Buffer 2`] = `
[
  {
    "data": [
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  [
    0,
    0,
    0,
    0,
    0,
  ],
  {},
  {
    "data": [
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  {
    "data": [
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  [
    0,
    0,
    0,
    0,
    0,
  ],
]
`;

exports[`(v) => v Map 1`] = `
[
  Map {
    "a" => 1,
    "b" => 2,
    "c" => 3,
  },
  {
    "a": 1,
    "b": 2,
    "c": 3,
  },
]
`;

exports[`(v) => v Map 2`] = `
[
  Map {
    "a" => 1,
    "b" => 2,
    "c" => 3,
  },
  Map {
    "c" => 3,
    "b" => 2,
    "a" => 1,
  },
  {
    "a": 1,
    "b": 2,
    "c": 3,
  },
  {
    "a": 1,
    "b": 2,
    "c": 3,
  },
]
`;

exports[`(v) => v RegExp 1`] = `
[
  /1/,
  {},
  /1/g,
  /1/i,
]
`;

exports[`(v) => v RegExp 2`] = `
[
  /1/,
  {},
  /1/g,
  /1/i,
  /1/,
  {},
  /1/g,
  /1/i,
]
`;

exports[`(v) => v boolean 1`] = `
[
  true,
]
`;

exports[`(v) => v boolean 2`] = `
[
  true,
  true,
  false,
  false,
  true,
]
`;

exports[`(v) => v boolean 2 1`] = `
[
  true,
  Infinity,
]
`;

exports[`(v) => v boolean 2 2`] = `
[
  true,
  true,
  false,
  false,
  true,
  null,
  0,
  undefined,
  null,
  0,
  undefined,
  0,
  NaN,
  Infinity,
  "",
]
`;

exports[`(v) => v function 1`] = `
[
  [Function],
  [Function],
  [Function],
]
`;

exports[`(v) => v function 2`] = `
[
  [Function],
  [Function],
  [Function],
  [Function],
  [Function],
  [Function],
]
`;

exports[`(v) => v function 2 1`] = `
[
  [Function],
  [Function],
  [Function],
  {},
]
`;

exports[`(v) => v function 2 2`] = `
[
  [Function],
  [Function],
  [Function],
  [Function],
  [Function],
  {},
  [Function],
  {},
]
`;

exports[`(v) => v main mixin test 1`] = `
[
  1,
  true,
  [
    "a",
    "b",
    "c",
  ],
  [
    "a",
    "c",
    "b",
  ],
  {
    "a": {
      "b": 2,
    },
  },
  {
    "a": {
      "b": 3,
    },
  },
  {
    "a": {
      "b": undefined,
    },
  },
  {
    "a": {},
  },
  {
    "a": {
      "b": 3,
      "c": undefined,
    },
  },
  /1/,
  {},
  /1/g,
  /1/i,
  "1",
  "0",
  "true",
  "undefined",
  "null",
  "false",
  Infinity,
  [Function],
  [Function],
  [Function],
]
`;

exports[`(v) => v main mixin test 2`] = `
[
  1,
  0,
  true,
  undefined,
  null,
  false,
  [
    "a",
    "b",
    "c",
  ],
  [
    "a",
    "b",
    "c",
  ],
  [
    "a",
    "c",
    "b",
  ],
  {
    "a": {
      "b": 2,
    },
  },
  {
    "a": {
      "b": 2,
    },
  },
  {
    "a": {
      "b": 3,
    },
  },
  {
    "a": {
      "b": undefined,
    },
  },
  {
    "a": {},
  },
  {
    "a": {
      "b": 3,
      "c": undefined,
    },
  },
  /1/,
  {},
  /1/,
  /1/g,
  /1/i,
  {},
  1,
  0,
  true,
  undefined,
  null,
  false,
  [
    "a",
    "b",
    "c",
  ],
  [
    "a",
    "b",
    "c",
  ],
  [
    "a",
    "c",
    "b",
  ],
  {
    "a": {
      "b": 2,
    },
  },
  {
    "a": {
      "b": 2,
    },
  },
  {
    "a": {
      "b": 3,
    },
  },
  {
    "a": {
      "b": undefined,
    },
  },
  {
    "a": {},
  },
  {
    "a": {
      "b": 3,
      "c": undefined,
    },
  },
  /1/,
  {},
  /1/,
  /1/g,
  /1/i,
  {},
  "1",
  "0",
  "true",
  "undefined",
  "null",
  "false",
  "",
  NaN,
  NaN,
  NaN,
  Infinity,
  [Function],
  [Function],
  [Function],
  [Function],
  [Function],
  [Function],
]
`;

exports[`(v) => v number 1`] = `
[
  1,
  2,
  3,
]
`;

exports[`(v) => v number 2`] = `
[
  1,
  2,
  3,
  3,
  0,
]
`;

exports[`(v) => v number 2 1`] = `
[
  1,
  2,
  3,
  Infinity,
]
`;

exports[`(v) => v number 2 2`] = `
[
  1,
  2,
  3,
  3,
  0,
  NaN,
  NaN,
  NaN,
  Infinity,
]
`;

exports[`(v) => v object 1`] = `
[
  {
    "a": {
      "b": 2,
    },
  },
  {
    "a": {
      "b": 3,
    },
  },
]
`;

exports[`(v) => v object 2`] = `
[
  {
    "a": {
      "b": 2,
    },
  },
  {
    "a": {
      "b": 2,
    },
  },
  {
    "a": {
      "b": 3,
    },
  },
]
`;

exports[`(v) => v string 1`] = `
[
  "1",
  "2",
  "3",
  "0",
  "a",
  "b",
  "c",
  "d",
]
`;

exports[`(v) => v string 2`] = `
[
  "1",
  "2",
  "3",
  "3",
  "0",
  "",
  "a",
  "b",
  "c",
  "a",
  "b",
  "d",
]
`;

exports[`(v) => v string[] 1`] = `
[
  [
    "a",
    "b",
    "c",
  ],
]
`;

exports[`(v) => v string[] 2`] = `
[
  [
    "a",
    "b",
    "c",
  ],
  [
    "a",
    "b",
    "c",
  ],
]
`;
